objects/ssot__ShoppingCart__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdjustedTotalProductAmount__c</fullName>
        <label>Adjusted Total Product Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BillToAccountId__c</fullName>
        <label>Bill To Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillToContactPointPhoneId__c</fullName>
        <label>Bill To Contact Point Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Shopping Cart Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToAccountId__c</fullName>
        <label>Ship To Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToContactPointPhoneId__c</fullName>
        <label>Ship To Contact Point Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShoppingCartStatus__c</fullName>
        <label>Shopping Cart Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShoppingCart_CreatedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShoppingCart_CreatedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ShoppingCart_CreatedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>ShoppingCart_CreatedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ShoppingCart_PartyId_map_Party_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShoppingCart_PartyId_map_Party_Id_N_1</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>ShoppingCart_PartyId_map_Party_Id_N_1</relationshipLabel>
        <relationshipName>ShoppingCart_PartyId_map_Party_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductAmount__c</fullName>
        <label>Total Product Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WebStoreId__c</fullName>
        <label>Web Store</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009496367_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShoppingCart_BillToAccountId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ShoppingCart_BillToAccountId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1702009496367_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009497392_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShoppingCart_WebStoreId_map_WebStore_rel</label>
        <referenceTo>ssot__WebStore__dlm</referenceTo>
        <relationshipLabel>ShoppingCart_WebStoreId_map_WebStore_rel</relationshipLabel>
        <relationshipName>rel_1702009497392_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009497943_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShoppingCart_ShipToAccountId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ShoppingCart_ShipToAccountId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1702009497943_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>